Simplify logic for displaying based on hasChildRoute and remove empty containers when not showing (they caused spacing issues)

--- a/web-client/src/styles/dashboard.scss
+++ b/web-client/src/styles/dashboard.scss
@@ -2,7 +2,7 @@
 @use "mixins" as *;
 
 .container {
-  padding: 20px 20px;
+  padding: 0 20px;
   margin: 0 auto;
   @include breakpoint($bp-medium) {
     padding: 20px 40px;
